Make sure to not end up with a bogus padding when we have a list-style-image. Bug 187419, r+sr=dbaron, a=chofmann